# FFmpegLearning

./: README.md
FFmpegSample/app/: build.gradle
FFmpegSample/app/src/androidTest/java/com/chauncy/ffmpegsample/: ExampleInstrumentedTest.java
FFmpegSample/app/src/main/: AndroidManifest.xml
FFmpegSample/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
FFmpegSample/app/src/main/java/com/chauncy/ffmpegsample/: MainActivity.java
FFmpegSample/app/src/test/java/com/chauncy/ffmpegsample/: ExampleUnitTest.java
FFmpegSample/gradle/wrapper/: gradle-wrapper.properties
